# Tinamit

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  Biofísico.py  CODE_OF_CONDUCT.md  Central.py  Conectado.py  Controles.py  Documentación.txt  Interactivo.py  MANIFEST.in  MDS.py  Prueba bf.py  Prueba dll.mdl  Prueba dll.vpm  Prueba.py  README.md  README.rst  Tz'olöj Ya'.py  appveyor.yaml  appveyor.yml  babel.cfg  instalar.py  pyproject.toml  reqs.op.txt  reqs.txt  requirements.txt  requísitos.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: error-en-tinam-t.md  solicitud-de-funcionalidad.md
Ejemplos/: Prueba bf.py  Prueba conectado.py
Ejemplos/Ejemplo SAHYSMOD/: Coupling script.py  Envoltura SAHYSMOD.py  Envoltura_SAHYSMOD.py  INPUT_EXAMPLE.inp  SAHYSMOD.inp  SAHYSMOD_wrapper.py  TEMPLATE.inp  TEMPLATE_copia.inp  Tinamit.inp  Tinamit.out
Ejemplos/Ejemplo básico/: Corrida Tinamit.vdf  Current.vdf  Prueba bf.py  Prueba conectado.py  Prueba de modelo.tin  Prueba dll.vpm
Ejemplos/Ejemplo_SAHYSMOD/: Coupling script.py  GBSDM_V4.vpm  INPUT_EXAMPLE.inp  SAHYSMOD.inp  SAHYSMOD_wrapper.py  TEMPLATE.inp  Tinamit.inp
Incertidumbre/: Controles.py  Datos.py  Ejemplo.py  Modelo.py  Variables.py
Interfaz/: Animaciones.py  Arte.py  Botones.py  Cajas.py  CajasGenéricas.py  CajasSubEtapas.py  Central.py  Controles.py  ControlesGenéricos.py  Formatos.py  Gráficos.py  IGU.py  Interfaz.py  Listas.py  Objetos.py  Pantallas.py  Trads  Traducciones.py  __init__.py
docs/: Makefile  act_trads.py  index.html  make.bat  reqs.rtfd.txt  zanata.xml
docs/.tx/: tx.sh
docs/source/: Conectado.rst  IGU.rst  IPA.rst  Instalación.rst  Modelo.rst  Unidades.rst  agradecimientos.rst  conf.py  contribuidores.rst  contribuir.rst  des_mds  des_mds.rst  des_trad.rst  desarrollo.rst  docu.rst  (+11 more)
docs0/: Makefile  conf.py
licencia/: LIZENZ.md  授權  许可协议.txt
pruebas/: .coverage  .coveragerc  prueba_mds.py  test_anlz_sens.py  test_bf.py  test_calib.py  test_calib_ecs.py  test_calib_valid_modelos.py  test_clima.py  test_conectado.py  test_config.py  test_datos.py  test_envolt_bf_externas.py  test_envolt_externas.py  test_envolturas_bf.py  test_geog.py  test_idm.py  test_mba.py  test_mds.py  test_microcalib.py  test_modelo.py  test_números.py  test_simuls_con_datos.py  test_sintaxis.py  test_unidades.py
pruebas3/: ejemplo_cliente.py  test_idm.py  test_modelo.py
tests/: conftest.py  test_conectado.py  test_modelo.py
tinamit/: BF.py  Biofísico.py  Conectado.py  MDS.py  Modelo.py  NuevoBF.py  NuevoMDS.py  NuveoConectado.py  Stella.py  __init__.py  config.py  cositas.py  definiciones.py  requirements.readthedocs.txt
tinamit0/: config.py  cositas.py
tinamit3/: clima.py  conectado.py  conex.py  contexto.py  datos.py  externos.py  hilo.py  instalador.py  modelo.py  rebanada.py  resultados.py  servidor.py  simul.py  tiempo.py  utils.py  variables.py
trads/: .config.json  .struct.json  .ਅਨੁ.json  ਅਨੁ.json
(+1624 files in other folders)
