[tool.poetry]
name = "tinamit"
version = "3.0.0"
description = "Conexión de modelos socioeconómicos (dinámicas de los sistemas) con modelos biofísicos."
authors = ["julienmalard <julien.malard@mail.mcgill.ca>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/julienmalard/tinamit"
documentation = "https://tinamit.rtfd.io"
packages = [
    { include = 'tinamit', from = 'src' }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
trio = "0.22.0"
click = "^8.1.3"
numpy = "^1.19.2"
xarray = "2023.1.0"
ennikkai = "^1.2.5"
pysd = "^3.9.0"
pandas = "^1.1.2"
scipy = "^1.10.0"
regex = "^2022.10.31"
python-dateutil = "^2.8.1"
asks = "^2.4.10"
tldextract = "^2.2.3"
semantic-version = "^2.8.5"
matplotlib = "^3.3.2"
taqdir = "^2.1.3"
Bottleneck = "^1.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
pytest-subtests = "^0.3.2"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"
pytest-trio = "^0.6.0"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["tinamit"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
tinamit = "tinamit.ipa:correr"
